# sample_azure_iot_c_app

./: CMakeLists.txt  README.md  main.c
